new file:   .evn 	new file:   hello.php 	modified:   index.html 	renamed:    profile,js -> profile.js 	new file:   ron.js 	modified:   script.js 	new file:   script2.js

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning</title>
+    <title>Learn</title>
 </head>
-<body">
+<body>
+    <?php
+        echo "Hello, world"
+    ?>
 </body>
 </html>
